--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html{
 
 a{
     text-decoration: none;
+    color: white;
 }
 img{
     height: 100%;
@@ -27,7 +28,6 @@ p {
     font-weight: 200;
     letter-spacing: 0.05rem;
 }
-
 .container{
     min-height: 100vh;
     width: 100%;
